<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytContenedor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical" >
    <TextView android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombreUsuario" />
    <EditText android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="text" />
    <TextView android:id="@+id/lblApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidosUsuario" />
    <EditText android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="text" />
    <TextView android:id="@+id/lblNumeroTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefonoUsuario" />
    <EditText android:id="@+id/numeroTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="phone" />
    <TextView android:id="@+id/lblTellUsSomething"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinosAlgo" />
    <EditText android:id="@+id/textComentanosAlgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="textAutoCorrect" />
    <Button android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonAceptar" />
</LinearLayout>